i changed my header in index.html from computer to system

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h6>Rice and Chicken,Juice</h6>
 
     <hr>
-    <h1 style="color: tomato;">Computer</h1>
+    <h1 style="color: tomato;">system</h1>
     <p></p>Computer is an electronic machine that accepts data as an input, process the data, store the data and give out the output
         as information.
         <br>Computer accepts data
